# Tg_bot

tg_bot_rust/: .env  Cargo.toml  Railway.json  Railway.toml
tg_bot_rust/src/: main.rs
